styling of totals

--- a/index.html
+++ b/index.html
@@ -52,24 +52,19 @@
                   <span class="filter-count headline"></span></h3>
               </div>
               <div class="his_chart" id="connectivitytotal">
-                  <h4>Connectivity</h4>
-                  <span class="filter-count headline"></span>
+                  <h4>Connectivity: <span class="filter-count right headline"></span></h4>
               </div>
                     <div class="his_chart" id="healthtotal">
-                        <h4>Health</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>Health: <span class="filter-count right headline"></span></h4>
                     </div>
                     <div class="his_chart" id="washtotal">
-                        <h4>WASH</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>WASH: <span class="filter-count right headline"></span></h4>
                     </div>
                     <div class="his_chart" id="rfltotal">
-                        <h4>RFL</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>RFL: <span class="filter-count right headline"></span></h4>
                     </div>
                     <div class="his_chart" id="psstotal">
-                        <h4>PSS</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>PSS: <span class="filter-count right headline"></span></h4>
                     </div>
             </div>
             <div class="col-md-2">
@@ -77,33 +72,26 @@
                   <h3>Distributions<br/>
                   <span class="filter-count headline"></span></h3>
               </div>
-              <div class="his_chart" id="foodtotal">
-                  <h4>Food</h4>
-                  <span class="filter-count headline"></span>
-              </div>
+                    <div class="his_chart" id="foodtotal">
+                        <h4>Food: <span class="filter-count right headline"></span></h4>
+                    </div>
                     <div class="his_chart" id="hygienetotal">
-                        <h4>Hygiene</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>Hygiene Items: <span class="filter-count right headline"></span></h4>
                     </div>
                     <div class="his_chart" id="watertotal">
-                        <h4>Water Bottles</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>Water Bottles: <span class="filter-count right headline"></span></h4>
                     </div>
                     <div class="his_chart" id="clothingtotal">
-                        <h4>Clothing</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>Clothing: <span class="filter-count right headline"></span></h4>
                     </div>
                     <div class="his_chart" id="warmthtotal">
-                        <h4>Sleeping Bags &amp; Camp Mats</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>Warmth Items: <span class="filter-count right headline"></span></h4>
+                    </div>
+                    <div class="his_chart" id="bagstotal">
+                        <h4>Bags: <span class="filter-count right headline"></span></h4>
                     </div>
                     <div class="his_chart" id="ramadantotal">
-                        <h4>Ramadan Items</h4>
-                        <span class="filter-count headline"></span>
-                    </div>
-                    <div class="Duffel Bags &amp; Backpacks" id="bagstotal">
-                        <h4>Textiles</h4>
-                        <span class="filter-count headline"></span>
+                        <h4>Ramadan Items: <span class="filter-count right headline"></span></h4>
                     </div>
                 </div>
                 <div class="col-md-3">
